<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/effectsFragment">

    <fragment
        android:id="@+id/effectsFragment"
        android:name="com.lusa.fluidwallpaper.fragments.EffectsFragment"
        android:label="@string/menu_effects"
        tools:layout="@layout/fragment_effects" />

    <fragment
        android:id="@+id/colorsFragment"
        android:name="com.lusa.fluidwallpaper.fragments.ColorsFragment"
        android:label="@string/menu_colors"
        tools:layout="@layout/fragment_colors" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.lusa.fluidwallpaper.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/presetsFragment"
        android:name="com.lusa.fluidwallpaper.fragments.PresetsFragment"
        android:label="@string/menu_presets"
        tools:layout="@layout/fragment_presets" />

</navigation>
