<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_top_gray_30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:foreground="?actionBarItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/view_bottom_sheet_navigation"
            app:layout_constraintEnd_toEndOf="@+id/btnOneBelow"
            app:layout_constraintStart_toStartOf="@id/btnOneBelow"
            app:layout_constraintTop_toTopOf="@+id/view_bottom_sheet_navigation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_one"
                    android:layout_width="@dimen/_21sdp"
                    android:layout_height="@dimen/_21sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_effects_ena"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/kanit_medium"
                    android:text="@string/effects"
                    android:textAlignment="center"
                    android:textColor="@color/color_FF8FA8"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@+id/ic_one" />

                <ImageView
                    android:id="@+id/ivDivider1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:src="@drawable/ic_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOne" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:foreground="?actionBarItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/view_bottom_sheet_navigation"
            app:layout_constraintEnd_toEndOf="@+id/btnTwoBelow"
            app:layout_constraintStart_toStartOf="@id/btnTwoBelow"
            app:layout_constraintTop_toTopOf="@+id/view_bottom_sheet_navigation">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_two"
                    android:layout_width="@dimen/_21sdp"
                    android:layout_height="@dimen/_21sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_colors"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/kanit_medium"
                    android:text="@string/colors"
                    android:textAlignment="center"
                    android:textColor="@color/color_B4A9D2"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@+id/ic_two" />

                <ImageView
                    android:id="@+id/ivDivider2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTwo" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:foreground="?actionBarItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/view_bottom_sheet_navigation"
            app:layout_constraintEnd_toEndOf="@+id/btnThreeBelow"
            app:layout_constraintStart_toStartOf="@id/btnThreeBelow"
            app:layout_constraintTop_toTopOf="@+id/view_bottom_sheet_navigation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icThree"
                    android:layout_width="@dimen/_21sdp"
                    android:layout_height="@dimen/_21sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/kanit_medium"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="@color/color_B4A9D2"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@+id/icThree" />

                <ImageView
                    android:id="@+id/ivDivider3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvThree" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:foreground="?actionBarItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/view_bottom_sheet_navigation"
            app:layout_constraintEnd_toEndOf="@+id/btnFourBelow"
            app:layout_constraintStart_toStartOf="@id/btnFourBelow"
            app:layout_constraintTop_toTopOf="@+id/view_bottom_sheet_navigation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icFour"
                    android:layout_width="@dimen/_21sdp"
                    android:layout_height="@dimen/_21sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_presets"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/kanit_medium"
                    android:text="@string/library"
                    android:textAlignment="center"
                    android:textColor="@color/color_B4A9D2"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@+id/icFour" />

                <ImageView
                    android:id="@+id/ivDivider4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvFour" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
